# DuxNet-api-store

./: .gitignore  COMMUNITY_FUND_README.md  CONTRIBUTING.md  GITHUB_UPDATE_SUMMARY.md  LICENSE  README.md  README_DUX_INTEGRATION.md  build-appimage.sh  create-new-repo.md  package-lock.json  package.json  start_duxnet_with_dux.sh
frontend/: script.js
src/: main.rs
src-tauri/: Cargo.toml  create-icons.sh  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/api/: mod.rs
src-tauri/src/core/: dht.rs  reputation.rs  tasks.rs
src-tauri/src/wallet/: mod.rs
src/api/: dux_coin.rs  mod.rs
src/core/: community_fund.rs  data_structures.rs  dht.rs  escrow.rs  identity.rs  messaging.rs  mod.rs  reputation.rs  tasks.rs
src/network/: mod.rs
src/wallet/: mod.rs
static/: index.html  script.js  style.css
