[package]
name = "duxnet-wallet"
version = "0.1.0"
description = "DuxNet Wallet Desktop Application"
authors = ["DuxNet Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
bincode = "1.3"
sha2 = "0.10"
ed25519-dalek = "2.0"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
hex = "0.4"
base64 = "0.21"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
# Disable Windows resource compilation for development
no-windows-resource = [] 
